<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_text"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.123" />

    <EditText
        android:id="@+id/input_email"
        android:layout_width="@dimen/login_elements_width"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/email_text"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.304"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="@dimen/login_elements_width"
        android:layout_height="45dp"
        android:layout_marginBottom="150dp"
        android:ems="10"
        android:hint="@string/password_text"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_email"
        app:layout_constraintVertical_bias="@dimen/register_input_bias"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/input_password_again"
        android:layout_width="@dimen/login_elements_width"
        android:layout_height="45dp"
        android:layout_marginBottom="150dp"
        android:ems="10"
        android:hint="@string/password_again_text"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_password"
        app:layout_constraintVertical_bias="@dimen/register_input_bias"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="@dimen/login_elements_width"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary"
        android:text="@string/register_text"
        android:onClick="register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_password_again"
        app:layout_constraintVertical_bias="0.091"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="208dp"
        android:layout_height="49dp"
        android:backgroundTint="@color/primary"
        android:onClick="back"
        android:text="@string/back_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.921"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        tools:ignore="UsingOnClickInXml" />

</androidx.constraintlayout.widget.ConstraintLayout>

