<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardBackgroundColor="#ffffff"
    app:cardCornerRadius="10dp"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">

        <ImageView
            android:id="@+id/wedding_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:importantForAccessibility="auto" />

        <AbsoluteLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="Deprecated">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="#40000000">

                <TextView
                    android:id="@+id/wedding_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:paddingStart="10dp"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </AbsoluteLayout>

        <LinearLayout
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/wedding_image"
            android:orientation="horizontal"
            android:paddingBottom="10dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:importantForAccessibility="auto"
                android:src="@drawable/location_icon"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp" />

            <TextView
                android:id="@+id/wedding_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textSize="15sp" />

        </LinearLayout>

        <Button
            app:cornerRadius="8dp"
            android:id="@+id/reservation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/location"
            android:backgroundTint="@color/primary"
            android:text="@string/reservation_text"
            android:textStyle="bold"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp" />

        <Button
            app:cornerRadius="8dp"
            android:id="@+id/take_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/reservation"
            android:backgroundTint="@color/primary"
            android:text="@string/take_picture_text"
            android:textStyle="bold"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp" />

        <Button
            app:cornerRadius="8dp"
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/take_picture"
            android:backgroundTint="@color/danger"
            android:text="@string/delete_wedding_text"
            android:textStyle="bold"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp" />

        <TextView
            android:id="@+id/anonymus_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/location"
            android:text="@string/anonymus_text"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>
